# Rusty-game-jam-2021

./: .editorconfig  Cargo.toml  README.md  ideas.txt  readme.md
assets/maps/bevy_test_map/: map_settings.json
assets/maps/game_jam_map_test_1/: map_settings.json
src/: bloc.rs  camera.rs  id.rs  input.rs  item.rs  main.rs  map.rs  menu.rs  monster.rs  physics.rs  player.rs  weapon.rs
