[package]
name = "rusty-game-jam-2021"
version = "0.1.0"
edition = "2018"
authors = [
    "Bowarc <yuyeaaaahhhh@laposte.net>",
    "Eragon <eragon@eragon.re>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.6.0"
serde = "1.0"
# serde_derive = "1.0"
# serde_json = "1.0"
glam = "0.15"
ggez-egui = "0.1"
egui = "0.13"
rand = {version = "0.8", features = ["std_rng"] }
noise = "0.7"
